versioned_docs/version-2.15/reference/subsystems/regex-lint.mdx
---
title: regex-lint
description: |
  Lint your code using regex patterns, e.g. to check for copyright headers.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Lint your code using regex patterns, e.g. to check for copyright headers.

To activate this with the `lint` goal, you must set `[regex-lint].config`.

Unlike other linters, this can run on files not owned by targets, such as BUILD files.

Backend: <span className="color--primary">`pants.backend.project_info`</span>

Config section: <span className="color--primary">`[regex-lint]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]regex-lint-skip`}
  env_repr='PANTS_REGEX_LINT_SKIP'
  toml_repr={`[regex-lint]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use regex-lint when running `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

### `config`

<Option
  cli_repr={`--regex-lint-config="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_REGEX_LINT_CONFIG'
  toml_repr={`[regex-lint.config]
key1 = val1
key2 = val2
...`}
  default_repr={`{}`}
>

Config schema is as follows:

```
{
'required_matches': {
    'path_pattern1': [content_pattern1, content_pattern2],
    'path_pattern2': [content_pattern1, content_pattern3],
    ...
},
'path_patterns': [
    {
    'name': path_pattern1',
    'pattern': <path regex pattern>,
    'inverted': True|False (defaults to False),
    'content_encoding': <encoding> (defaults to utf8)
    },
    ...
],
'content_patterns': [
    {
    'name': 'content_pattern1',
    'pattern': <content regex pattern>,
    'inverted': True|False (defaults to False)
    }
    ...
]
}
```

Meaning: if a file matches some path pattern, its content must match all the corresponding content patterns.

It&#x27;s often helpful to load this config from a JSON or YAML file. To do that, set `[regex-lint].config = '@path/to/config.yaml'`, for example.

</Option>

### `detail_level`

<Option
  cli_repr={`--regex-lint-detail-level=<DetailLevel>`}
  env_repr='PANTS_REGEX_LINT_DETAIL_LEVEL'
  toml_repr={`[regex-lint]
detail_level = <DetailLevel>`}
  one_of='none, summary, nonmatching, names, all'
  default_repr={`nonmatching`}
>

How much detail to include in the result.

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
